# workshop-bank-ocr

./: .gitignore  README.md  kick-off.md  pyproject.toml
src/: checksum.py  corrector.py  formatter.py  main.py  parser.py  web.py
static/: index.html
tests/: test_checksum.py  test_corrector.py  test_formatter.py  test_parser.py  test_validation.py  test_web.py
